# apimocker

./: Cargo.toml  LICENSE  Makefile  README.md
examples/: data.json  example.json
src/: main.rs  state.rs
